# RiceEngine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  GameMain.sln  README.md  build-eclipse-clang.bash  build-eclipse-mingw-clang.cmd  build-eclipse-ninja-clang.cmd  build.cmd  component-handler.md  rice-editor.md  staging-buffer.md
CMakeSource/: CMakeLists.txt
CMakeSource/lib/include/fmt/: core.h
CMakeSource/lib/include/magic_enum/: magic_enum.hpp
CMakeSource/shaders/: triangle.vert
CMakeSource/src/GameMain/src/: config.h  pch.h  test.cpp
CMakeSource/src/RiceEngine/src/: Core.cpp  config.h  pch.h
GameMain/: CMakeLists.txt  GameMain.vcxproj  GameMain.vcxproj.filters  log.txt  main.cpp
GameMain/res/: CMakeLists.txt
GameMain/res/config/: GameSceneResources.json  LoadingSceneResources.json  MainMenuSceneResources.json
GameMain/shaders/: DiffuseShader.hlsl  ImgShader.hlsl  LightBuffer.hlsli  PixelShader.hlsl  SamplePostProcess.hlsl  Shadows.hlsli  SkyBoxPixel.hlsl  SkyBoxVertex.hlsl  TexturedShader.hlsl  Underwater.hlsl  VertexShader.hlsl  WaterShader.hlsl  WaterVS.hlsl  dark_grass.hlsl  dark_stone.hlsl  dirt.hlsl  grass.hlsl  sand.hlsl  snow.hlsl  stone.hlsl  water.hlsl
GameMain/shaders/UI/: ButtonShader.hlsl
GameMain/src/: MyRender.cpp  MyRender.h  Scripts.h  constants.cpp  pch.h  test.cpp
GameMain/src/Scenes/: LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h  PhysicsTest.h  SampleScene.cpp  SampleScene.h
GameMain/src/Scripts/: CameraMover.h  CameraMoverScript.h  ChunkGenerator.h  InitSceneScript.h  InitScript.h  MsaaTestScript.h  PlayerHandler.h  PostInitScript.h  PreInitScript.h  SamplePostProcess.h  SampleScene.h
GameMain/src/Scripts/UI/: DebugText.h
GameMain/src/Scripts/Util/: MeshGenerator.h  PerlinNoise.h  Tables.h  Util.cpp  Util.h
GameMain/src/Scripts/World/: Chunk.h  FlatGenerator.h  Generator.cpp  HeightMap.h  StandartGenerator.h  Voxel.h  World.cpp  World.h  WorldGenerator.h  WorldSeed.h
GameMain/x64/Debug/: GameMain.exe.recipe  GameMain.ilk  vc142.idb
GameMain/x64/Debug/GameMain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  fxc.command.1.tlog  fxc.read.1.tlog  fxc.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GameMain/x64/Release/: GameMain.exe.recipe  GameMain.iobj  GameMain.ipdb
GameMain/x64/Release/GameMain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameMain.lastbuildstate  fxc.command.1.tlog  fxc.read.1.tlog  fxc.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RiceEngine/: CMakeLists.txt
RiceEngine/ComponentBuilder/: CMakeLists.txt
RiceEngine/ComponentBuilder/include/: ComponentHelper.hpp  ComponentSerializer.hpp  EditorHelper.hpp  ReflectionHelper.hpp  SerializableComponent.hpp  main.cpp  serialization_helper.hpp
RiceEngine/ComponentBuilder/src/: library.cpp
RiceEngine/ComponentBuilder/tests/: CMakeLists.txt
RiceEngine/ComponentBuilder/tests/Components/: CMakeLists.txt
RiceEngine/ComponentBuilder/tests/TestComponent/: CMakeLists.txt
RiceEngine/ComponentBuilder/tests/include/: ast.json  meta.hpp  test.ast  test.cpp  testrtti.hpp  testrtti.hpp.gch
RiceEngine/ComponentBuilder/tests/src/: dlload.cpp
RiceEngine/ExternalLibs/: CMakeLists.txt
RiceEngine/GL/: CMakeLists.txt
RiceEngine/GL/src/: API_helper.cpp  Buffer.cpp  CommandBuffer.cpp  GraphicsComponentBase.cpp  GraphicsManager.cpp  IndexBuffer.cpp  Material.cpp  Model.cpp  RenderingMesh.cpp  Shader.cpp  StagingBuffer.cpp  Texture2D.cpp  UniformBuffer.cpp  VertexBuffer.cpp  VulkanHelper.cpp  config.h  pch.h
RiceEngine/GL/src/Vulkan_API_code/: MemoryManager.hpp  MemoryManager.inl  VulkanException.hpp  VulkanHelper.hpp  api_Buffer.hpp  api_Buffer_impl.inl  api_CommandBuffer.hpp  api_CommandBuffer_impl.hpp  api_CommandBuffer_impl.inl  api_GraphicsManager.hpp  api_GraphicsManager_impl.hpp  api_GraphicsManager_impl.inl  api_Shader.hpp  api_Shader_impl.inl  api_UniformBuffer.hpp  api_UniformBuffer_impl.hpp  api_UniformBuffer_impl.inl  helper_impl.inl
RiceEngine/Math/: CMakeLists.txt
RiceEngine/Math/src/: Math.cpp  Matrixes.cpp  Vectors.cpp  pch.h
RiceEngine/MetaCompiler/: CMakeLists.txt
RiceEngine/MetaCompiler/include/MetaCompiler/: ReflectionHelper.hpp
RiceEngine/MetaCompiler/src/: main.cpp  parser.cpp
RiceEngine/Networking/: CMakeLists.txt
RiceEngine/Networking/src/: VirtualClient.cpp  VirtualServer.cpp  pch.h
RiceEngine/Rice/: CMakeLists.txt
RiceEngine/Rice/include/Rice/: defines.h  macros.h  namespaces.h  stdafx.hpp
RiceEngine/Tests/: CMakeLists.txt
RiceEngine/Tests/shaders/: CMakeLists.txt  solid.vert
RiceEngine/Tests/src/: CocnurrentListTest.cpp  ConcurrentQueueTests.cpp  CoreTest.cpp  CubeTest.cpp  MultiCubePerformanceTest.cpp  QuadTest.cpp  TriangleTest.cpp  WindowTest.cpp  pch.h
RiceEngine/Util/: CMakeLists.txt
RiceEngine/Util/src/: Event.cpp  Exception.cpp  Threads.cpp  Util.cpp  pch.h
RiceEngine/compcompiler/: CMakeLists.txt
RiceEngine/compcompiler/src/: ComponentClass.hpp  ComponentHelper.h  ComponentHelper.hpp  SerializableComponent.hpp
RiceEngine/compcompiler/tests/: CMakeLists.txt
RiceEngine/doc/: net_protocol.md  scene.md
RiceEngine/include/Rice/: Engine.hpp  config.h  defines.h  stdafx.hpp
RiceEngine/lib/: CMakeLists.txt
RiceEngine/shaders/: CMakeLists.txt  quad_test.frag  quad_test.vert  triangle.vert
RiceEngine/src/: Core.cpp  pch.h
RiceEngine/src/Engine/: ClientCore.cpp  CoreBase.cpp  Engine.cpp  EngineBase.cpp  InputManager.cpp  Log.cpp  Window.cpp
RiceEngine/src/Networking/: VirtualClient.cpp
RiceEngine/src/Scene/: ClientScene.cpp  Component.cpp  Object.cpp  PackableComponent.cpp  Scene.cpp  SceneBase.cpp  SceneObjectBase.cpp  SceneRender.cpp
UniPlatformBuild/: CMakeLists.txt  CMakeSettings.json  GameMain.sln
UniPlatformBuild/lib/x64/: OpenAL32.lib  common.lib  libvorbis_static.lib  ogg.lib  vorbisfile.lib
UniPlatformBuild/src/: GameMain.sln
UniPlatformBuild/src/GameMain/: GameMain.vcxproj  GameMain.vcxproj.filters
UniPlatformBuild/src/RiceEngine/: GameEngine.vcxproj.filters
doc/: core.md  (+2 more)
(+657 files in other folders)
