cmake_minimum_required(VERSION 3.19)

project("ComponentBuilder")

set(CMAKE_CXX_STANDARD 20)

add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})

set(RICE_COMPONENT_BUILDER_INCLUDES ${RICE_COMPONENT_BUILDER_INCLUDES} ${RICE_INCLUDE_PATH})
set(RICE_COMPONENT_BUILDER_INCLUDES ${RICE_COMPONENT_BUILDER_INCLUDES} ${LIB_INCLUDE_PATH})
set(RICE_COMPONENT_BUILDER_INCLUDES ${RICE_COMPONENT_BUILDER_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(RICE_COMPONENT_BUILDER_INCLUDES ${RICE_COMPONENT_BUILDER_INCLUDES} CACHE INTERNAL "")

set(RICE_COMPONENT_BUILDER_LIBRARY_HELPER ${CMAKE_CURRENT_SOURCE_DIR}/src/library.cpp CACHE INTERNAL "")
add_subdirectory("tests")

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include DESTINATION .)