cmake_minimum_required(VERSION 3.19)

project("ComponentBuilder")

set(CMAKE_CXX_STANDARD 20)

#file search
file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp" )
file(GLOB_RECURSE HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")

add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})

set(RICE_COMPONENT_BUILDER_INCLUDES ${RICE_COMPONENT_BUILDER_INCLUDES} ${RICE_INCLUDE_PATH})
set(RICE_COMPONENT_BUILDER_INCLUDES ${RICE_COMPONENT_BUILDER_INCLUDES} ${LIB_INCLUDE_PATH})
set(RICE_COMPONENT_BUILDER_INCLUDES ${RICE_COMPONENT_BUILDER_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(RICE_COMPONENT_BUILDER_INCLUDES ${RICE_COMPONENT_BUILDER_INCLUDES} CACHE INTERNAL "")

set(RICE_COMPONENT_BUILDER_LIBRARY_HELPER ${CMAKE_CURRENT_SOURCE_DIR}/src/library.cpp CACHE INTERNAL "")
add_subdirectory("tests")

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include DESTINATION .)