cmake_minimum_required(VERSION 3.19)

project("TestComponent")

set(CMAKE_CURRENT_BINARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/.build")

#file search
file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" )
file(GLOB_RECURSE HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.inl" )

add_library(${PROJECT_NAME} SHARED ${SOURCES} ${HEADERS} ${RICE_COMPONENT_BUILDER_LIBRARY_HELPER})
target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/config.h)

include_directories(${PROJECT_NAME} ${RICE_COMPONENT_BUILDER_INCLUDES})
include_directories(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

target_link_directories(${PROJECT_NAME} PRIVATE
${ANY_LIB_BIN_PATH}
${LIB_BIN_PATH}
${PROJECT_BINARY_DIR}
${DXSDK_LIB_PATH}/x64
${VULKAN_LIB_PATH}
)

target_link_libraries(${PROJECT_NAME} ${RICE_LIBS})




